src/objects/Subscription_User__c.object
<CustomObject>
    <description>Holds details of the Subscribers linked to a Subscription Product</description>
    <fields>
        <fullName>Activate__c</fullName>
        <description>Created to filter in the scheduled flow, because we can&apos;t filter on date fields in the schedule filter criteria. @see https://help.salesforce.com/s/articleView?id=000356305&amp;type=1

We&apos;re checking for if the Start Date is before now, and the End Date is either in the future, or it&apos;s before the Start Date (we&apos;re reactivating an old subscriber)</description>
        <formula>Subscription_NG__r.End_Date__c &gt;= TODAY() &amp;&amp; 
(NOT(ISPICKVAL(Subscriber_Status__c, &quot;Active&quot;)) &amp;&amp; 
DATEVALUE(Subscriber_Start_Date__c) &lt;= TODAY() &amp;&amp; 
((DATEVALUE(Subscriber_End_Date__c) &gt;= TODAY()) || (Subscriber_End_Date__c &lt; Subscriber_Start_Date__c)))</formula>
        <inlineHelpText>Shows if the subscriber should be auto-added to the subscription now</inlineHelpText>
        <label>Activate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Baseline_Start_Date__c</fullName>
        <formula>DATE(2022,01,01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This displays the baseline start date. This is the date on which the baseline subscription duration was established. It is used to calculate the subscription duration for subscriptions that started before the SCRIPT project.</inlineHelpText>
        <label>Baseline Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Baseline_Subscriber_Duration__c</fullName>
        <label>Baseline Subscriber Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Acc_Equals_to_Subs_Acc__c</fullName>
        <description>Checks if Contact Account is Equal to Subscription Account</description>
        <formula>IF(Contact__r.AccountId == Subscription_NG__r.Account__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Acc Equals to Subs Acc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If this subscription item user relates to a Contact, select the Contact here</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Subscription_Item_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedByReadonly__c</fullName>
        <formula>CreatedBy.FirstName &amp;&quot; &quot;&amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByReadonly</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <description>Created to filter in the scheduled flow, because we can&apos;t filter on date fields in the schedule filter criteria. @see https://help.salesforce.com/s/articleView?id=000356305&amp;type=1

We&apos;re checking if the End Date has passed, and also if the Start Date was before the End Date, or if the Start Date is in the future (i.e. we have been deactivated but will be activated in future)</description>
        <formula>Subscription_NG__r.End_Date__c &gt;= TODAY() &amp;&amp; 
(ISPICKVAL(Subscriber_Status__c,&quot;Active&quot;) &amp;&amp;
DATEVALUE(Subscriber_End_Date__c) &lt;= TODAY() &amp;&amp; 
((Subscriber_Start_Date__c &lt;= Subscriber_End_Date__c) || (DATEVALUE(Subscriber_Start_Date__c) &gt; TODAY())))</formula>
        <inlineHelpText>Shows if the Subscription User is ready for removal</inlineHelpText>
        <label>Deactivate?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delinian_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Delinian Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Subscription_Product__r.Subscription__r.End_Date__c</description>
        <formula>Subscription_NG__r.End_Date__c</formula>
        <inlineHelpText>Displays the End Date for this Subscription</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated during the autolaunched flow to generate an order for a new subscriber</description>
        <inlineHelpText>Links to the initial quarterly order for users who join a quarterly invoiced subscription part way through a quarter</inlineHelpText>
        <label>Initial Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Subscription Users</relationshipLabel>
        <relationshipName>Subscription_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this subscription item user relates to a Lead, select the Lead here</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Subscription_Item_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marked_For_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Subscription User will be deleted if the number of subscribers is greater than the renewal number of Subscribers</description>
        <inlineHelpText>If checked the Subscription User will be deleted if the number of subscribers is greater than the renewal number of Subscribers</inlineHelpText>
        <label>Marked For Removal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Copies__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the number of print copies</inlineHelpText>
        <label>Number of Copies</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Renewals__c</fullName>
        <formula>IF(NOT(ISBLANK(Subscription_NG__r.Opportunity__r.Previous_Opportunity__c)),1,0) + 
IF(NOT(ISBLANK(Subscription_NG__r.Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__c)),1,0) + 
IF(NOT(ISBLANK(Subscription_NG__r.Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__c)),1,0) + 
IF(NOT(ISBLANK(Subscription_NG__r.Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__c)),1,0) + 
IF(NOT(ISBLANK(Subscription_NG__r.Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__c)),1,0) + 
IF(NOT(ISBLANK(Subscription_NG__r.Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__r.Previous_Opportunity__c)),1,0) + 
+ IF(NOT(ISBLANK(Baseline_Subscriber_Duration__c )),Baseline_Subscriber_Duration__c,0)</formula>
        <label>Number of Renewals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Print_Copy_Notes__c</fullName>
        <inlineHelpText>Enter any notes or specific delivery requirements for print copies</inlineHelpText>
        <label>Print Copy Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Copy__c</fullName>
        <label>Print Copy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <formula>Subscription_NG__r.Products__c</formula>
        <inlineHelpText>Shows the product names for this Subscription</inlineHelpText>
        <label>Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRP_Integration_Message__c</fullName>
        <label>SRP Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRP_Integration_Status__c</fullName>
        <label>SRP Integration Status</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>&apos;Subscription_Product__r.Subscription__r.Start_Date__c&apos;</description>
        <formula>Subscription_NG__r.Start_Date__c</formula>
        <inlineHelpText>Displays the Start Date for this Subscription</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Subscription_NG__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the status of the related Subscription</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Duration__c</fullName>
        <formula>IF(
	NOT(ISBLANK( Baseline_Subscriber_Duration__c )),
	Subscription_NG__r.End_Date__c - Baseline_Start_Date__c + Baseline_Subscriber_Duration__c,
	Subscription_NG__r.End_Date__c - Subscription_NG__r.Start_Date__c
	) / 365</formula>
        <inlineHelpText>Displays the duration of this subscriber in years. This is calculated as the difference between the subscription end date and start date, unless the baseline subscription duration is populated, in which case we calculate it as the difference between the end date and the baseline date, and add the baseline duration.</inlineHelpText>
        <label>Subscriber Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscriber_End_Date__c</fullName>
        <description>End Date for the subscription of the Subscription User. After this date the Subscriber will be removed from the Subscription in Zephr.</description>
        <label>Subscriber End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscriber_Start_Date__c</fullName>
        <description>Start date for the Subscriber. On this date the user will be added in Zephr.</description>
        <label>Subscriber Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscriber_Status__c</fullName>
        <description>Status of the subscriber in Zephr</description>
        <label>Subscriber Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                    <isActive>false</isActive>
                    <label>Deleted</label>
                </value>
                <value>
                    <fullName>Removed</fullName>
                    <isActive>false</isActive>
                    <label>Removed</label>
                </value>
                <value>
                    <fullName>Scheduled for Addition</fullName>
                    <isActive>false</isActive>
                    <label>Scheduled for Addition</label>
                </value>
                <value>
                    <fullName>Scheduled for Removal</fullName>
                    <isActive>false</isActive>
                    <label>Scheduled for Removal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_NG__c</fullName>
        <label>Subscription NG</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Subscription Users</relationshipLabel>
        <relationshipName>Subscription_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subscription_User_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription User ID 18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(  Subscription_NG__r.Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Type of the related Subscription</inlineHelpText>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <description>Created as a formula field so that we have a single field regardless of the related object, for reporting purposes. For the moment we don&apos;t reference Lead because Address is a compound field on Lead</description>
        <formula>IF(NOT(ISBLANK(Contact__c)), Contact__r.MailingCountry ,&apos;&apos;)</formula>
        <inlineHelpText>Displays the Country of the related Contact</inlineHelpText>
        <label>User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_Email_Verified__c</fullName>
        <formula>OR(
  Zephr_User_Grant__r.Zephr_User__r.Zephr_Email_Verified__c,
  Zephr_User_Account_Grant__r.Zephr_User__r.Zephr_Email_Verified__c
)</formula>
        <inlineHelpText>Displays if the user has verified their email in Zephr</inlineHelpText>
        <label>Zephr Email Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zephr_Integration_Status__c</fullName>
        <formula>IF(NOT(ISBLANK(Zephr_User_Account_Grant__c)), TEXT(Zephr_User_Account_Grant__r.Zephr_Integration_Status__c),
IF(NOT(ISBLANK(Zephr_User_Grant__c)), TEXT(Zephr_User_Grant__r.Zephr_Integration_Status__c),
&apos;&apos;))</formula>
        <inlineHelpText>Displays the sync status of related Zephr records</inlineHelpText>
        <label>Zephr Integration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zephr_User_Account_Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zephr User Account Grant</label>
        <referenceTo>Zephr_User_Account_Grant__c</referenceTo>
        <relationshipLabel>Subscription Users</relationshipLabel>
        <relationshipName>Subscription_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_User_Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zephr User Grant</label>
        <referenceTo>Zephr_User_Grant__c</referenceTo>
        <relationshipLabel>Subscription Users</relationshipLabel>
        <relationshipName>Subscription_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zephr_User_Id__c</fullName>
        <formula>IF( Zephr_User_Account_Grant__c != NULL, Zephr_User_Account_Grant__r.Zephr_User_Id__c,  Zephr_User_Grant__r.Zephr_User__r.Zephr_Id__c )</formula>
        <label>Zephr User Id</label>
        <type>Text</type>
    </fields>
    <label>Subscription User</label>
    <nameField>
        <label>Subscription User ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Contact_Modification</fullName>
        <active>true</active>
        <errorConditionFormula>!$Permission.Change_Contact_on_Zephr_Sub_User &amp;&amp;
((PRIORVALUE(Contact__c) != null) &amp;&amp; (PRIORVALUE(Contact__c) != Contact__c))</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Contact value can&apos;t be changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscriber_End_Date_Must_Be_After_Start</fullName>
        <active>true</active>
        <errorConditionFormula>Subscriber_End_Date__c &lt; Subscriber_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Subscriber_End_Date__c</errorDisplayField>
        <errorMessage>The Subscriber End Date must be after the Subscriber Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscriber_Must_Have_Postal_Code</fullName>
        <active>false</active>
        <errorConditionFormula>Subscription_NG__r.Order_Product__r.Product2.Subscriber_Requires_Postal_Code__c  &amp;&amp; 
ISBLANK( Contact__r.MailingPostalCode )</errorConditionFormula>
        <errorMessage>You are not able to add this subscriber, because this product requires a postal code for subscribers and the subscriber does not have a postal code entered.</errorMessage>
    </validationRules>
</CustomObject>